--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-qunit": "~v0.5.2",
     "grunt-contrib-requirejs": "~0.4.0",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-qunit":"~v0.5.2"
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
